# recon-sentinel-repo

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pentester-workflow.patch  pyproject.toml  r10-fixes-plus-features.patch  r6-all-fixes.patch  r7-fixes.patch  r8-fixes.patch  r8-plus-readme.patch  recon-sentinel-audit-fixes.patch  stability-fixes.patch  vuln-improvements.patch
.claude/: settings.json
.claude/agents/: code-reviewer.md  project-rules-checker.md
.claude/commands/: check.md  debug.md  deploy.md  feature.md  implement.md  plan.md  research.md  review.md  scan.md  test.md  validate.md
.claude/rules/: agents.md  backend.md  database.md  docker.md  frontend.md  security.md  three-layer.md
backend/: .dockerignore  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
database/: schema-v1.1.sql  schema-v1.2.sql
design/: ui-mockup-v5.jsx
docs/: API-EXAMPLES.md  DEVELOPMENT.md  MASTER-PLAN.md  Recon-Sentinel-Architecture-v2.0.docx  Recon-Sentinel-Sprint-Plan.docx  TECHNICAL-DEBT.md  competitive-analysis.md
frontend/: Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
nginx/: nginx.conf  nginx.prod.conf
tests/: conftest.py  test_agent_integration.py  test_auth.py  test_corrections.py  test_cross_tenant.py  test_e2e.py  test_fanout.py  test_findings.py  test_health.py  test_new_corrections.py  test_scan_lifecycle.py  test_scope.py  test_vuln_agent.py  test_websocket_auth.py
(+113 files in other folders)
