[project]
name = "recon-sentinel"
version = "0.9.0"
description = "AI-Powered External Reconnaissance Platform"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Cyrus Lee"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
